--- a/style.css
+++ b/style.css
@@ -264,16 +264,27 @@ ul{
 .v-grw{
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
+}
+
+.grw-text{
+    display: flex;
+    flex-direction: column;
 }
 
 .button-4{
+    margin-top: 20px;
     width: 128px;
-    border: 1px solid rgb(255, 255, 255);
-    padding: 14px 12px;
+    border: 1px solid rgb(13, 187, 42);
+    background-color:rgb(13, 187, 42) ;
+    padding: 10px 12px;
     border-radius: 50px;
     gap: 15px;
     color: white;
+}
+
+#green{
+    color: rgb(13, 187, 42) ;
 }
 
 /* <!-- CONTAINER 5 --> */
@@ -282,6 +293,7 @@ ul{
     background-color: black;
     color: rgb(170, 169, 169);
     padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .l-container-5{
@@ -327,4 +339,103 @@ ul{
     display: flex;
     justify-content: center;
     gap: 18px;
+}
+
+/* FOOTER */
+
+footer{
+    background-color: rgb(15, 15, 15);
+    color: white;
+    padding-top: 60px;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding-bottom: 50px;
+}
+
+h4{
+    font-weight: bolder;
+    font-size: 18px;
+}
+
+.first{
+    height: 283px;
+    width: 367px;
+}
+
+.f-text-1{
+    color: rgb(170, 169, 169);
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+
+.f-text-2{
+    color: rgb(170, 169, 169);
+}
+
+.second{
+    width: 196px;
+}
+
+.s-list{
+    display: flex;
+    flex-direction: column;
+    color: rgb(170, 169, 169);
+    gap: 20px;
+}
+
+.third{
+    width: 245px;
+}
+
+.t-list{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.t-text{
+    font-weight: bolder;
+}
+
+.fourth{
+    width: 196px;
+}
+
+.fo-list{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.iconsss{
+    display: flex;
+    gap: 5px;
+}
+
+#red-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid red;
+    height: 40px;
+    width: 40px;
+    background-color: red;
+    border-radius: 50px;
+}
+
+.last{
+    display: flex;
+    justify-content: space-around;
+    border-top: 1px solid rgb(170, 169, 169);
+    margin-right: 15px;
+    margin-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    gap: 500px;
+    color: rgb(170, 169, 169);
+    font-weight: lighter;
 }
