--- a/style.css
+++ b/style.css
@@ -439,3 +439,15 @@ h4{
     color: rgb(170, 169, 169);
     font-weight: lighter;
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 10px;
+    border-radius: 4px;
+    border: none;
+    display: none;
+    color: white;
+    background-color: rgb(163, 159, 159);
+}
