--- a/style.css
+++ b/style.css
@@ -440,6 +440,8 @@ h4{
     font-weight: lighter;
 }
 
+/* SCROLL TO TOP BUTTON */
+
 #btn-back-to-top {
     position: fixed;
     bottom: 20px;
@@ -451,3 +453,7 @@ h4{
     color: white;
     background-color: rgb(163, 159, 159);
 }
+
+/* IMAGE SLIDER */
+
+
